<resources>
    <string name="app_name">MyWordList</string>
    <string name="menu_add">Add New Word</string>
    <string name="add_hint">Enter the Word</string>

    <string name="new_list_key">new_list</string>
    <string name="done_bt_title">Done</string>
    <string name="def_hint">Click Get Definition or Enter the Definition</string>
    <string name="get_def_bt">Get Definition</string>
    <string name="trans_hint">Click Search or enter translation or click translate button</string>
    <string name="delete_menu_bt">Delete</string>
    <string name="nums_items_selected">0 items selected</string>
    <string name="close_card">Close Card</string>
    <string name="move_bt_new">New</string>
    <string name="move_bt_almost">Almost</string>
    <string name="move_bt_know">Know</string>
    <string name="move_cencel_bt">Cancel</string>
    <string name="search_bt">search</string>
    <string name="card_definition">Definition:</string>
    <string name="edit_image_text">edit button</string>
    <string name="word_title">Word</string>
    <string name="card_def">Meaning of the word</string>
    <string name="about">About</string>
    <string name="about_app">My Word List - Vocabulary Builder is an app that helps you to learn English. There are three lists, Don\'t Know, Almost Know, Know, which provides you a style to sort your words and improve your vocabulary.</string>
    <string name="appicon">AppIcon</string>
    <string name="move_button_des">move word to other list</string>
    <string name="power_by_oxford">Power by Oxford</string>
    <string name="Add_title">Add New Word</string>
    <string name="edit_title">Edit</string>
    <string name="title">My Word List</string>
</resources>
