<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:orientation="vertical"
    android:padding="8dp">

    <AutoCompleteTextView
        android:id="@+id/word_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_hint" />

    <EditText
        android:id="@+id/def_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/def_hint"
        android:autofillHints="" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_def_bt"
        android:onClick="GetDefinition"/>

    <Spinner
        android:id="@+id/trans_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/trans_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trans_hint"/>

    <Button
        android:id="@+id/trans_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Translate"/>

</LinearLayout>