<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/appicon"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="12dp"
        android:textColor="#000000"
        android:text="@string/about_app"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/powered_by_oxford"
        android:padding="16dp"
        android:contentDescription="@string/power_by_oxford" />
</LinearLayout>