<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/move_layout_rounded"
    android:backgroundTint="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/move_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Move"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="'\nWhich list do you want to move to? \n"
        android:textSize="18sp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/move_bt_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/move_bt_1"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/move_bt_almost"
            android:layout_marginStart="8dp"
            android:background="@drawable/move_layout_rounded"
            android:backgroundTint="#D6D4D4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/move_bt_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/move_bt_2"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/move_bt_know"
            android:background="@drawable/move_layout_rounded"
            android:backgroundTint="#D6D4D4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/move_bt_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/move_bt_1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/move_bt_3"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/move_cencel_bt"
            android:background="@drawable/move_layout_rounded"
            android:backgroundTint="#F30C0C"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/move_bt_2"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>